replacing .collect with .list